# PIS-G

./: CMakeLists.txt  LICENSE  README.md  readme.txt  requirements.txt  user manual  user manual.docx  user manual.md
Output files/: result-parameter.txt
Source codes/: Dialog.py  Dialog3D.py  DialogAlgorithm.py  DialogClose.py  DialogGrid.py  DialogInformation.py  DialogInversionRange.py  DialogInversionSection.py  DialogNewPro.py  DialogSetXY.py  DialogThreeViews.py  Forwarding_DLL.cpp  Forwarding_DLL.h  InversionSection.py  MainWindow.py  Matplotlib3DWidget.py  MatplotlibWidget.py  ModelWidget.py  ModelWizard.py  ModelWizardWidget.py  TableWidget.py  ThreeViewsWidget.py  TreeWidget.py  Wizard.py  grav_rfi_ompcuda.cu  grav_rfi_ompcuda.h
src/: Dialog.py  Dialog3D.py  DialogAlgorithm.py  DialogClose.py  DialogGrid.py  DialogInformation.py  DialogInversionRange.py  DialogInversionSection.py  DialogNewPro.py  DialogSetXY.py  DialogThreeViews.py  Forwarding_DLL.cpp  Forwarding_DLL.h  InversionSection.py  MainWindow.py  Matplotlib3DWidget.py  MatplotlibWidget.py  ModelWidget.py  ModelWizard.py  ModelWizardWidget.py  TableWidget.py  ThreeViewsWidget.py  TreeWidget.py  Wizard.py  grav_rfi_ompcuda.cu  grav_rfi_ompcuda.h
test_data/: grav_rfi_data.txt
